--- a/style.css
+++ b/style.css
@@ -1,50 +1,50 @@
 :root {
-  --yellow: #d4ba6b;
+  --black: #1a1a1a;
   --red: #d9534f;
   --white: #ffffff;
-  --light-gray: #a0a0a0;
+  --yellow: #d4ba6b;
   --dark-gray: #363636;
-  --black: #1a1a1a;
+  --light-gray: #a0a0a0;
 }
 
 :root {
   --blue: #007bff;
-  --light-blue: #80bdff;
-  --indigo: #6610f2;
-  --purple: #6f42c1;
-  --pink: #e83e8c;
-  --orange: #fd7e14;
-  --green: #28a745;
-  --teal: #20c997;
   --cyan: #17a2b8;
+  --danger: var(--red);
+  --dark: var(--gray-dark);
   --gray: #6c757d;
-  --gray-dark: #343a40;
+  --green: #28a745;
+  --indigo: #6610f2;
+  --info: var(--cyan);
+  --light: #f8f9fa;
+  --orange: #fd7e14;
+  --pink: #e83e8c;
   --primary: var(--blue);
+  --purple: #6f42c1;
   --secondary: var(--gray);
   --success: var(--green);
-  --info: var(--cyan);
+  --teal: #20c997;
   --warning: var(--yellow);
-  --danger: var(--red);
-  --light: #f8f9fa;
-  --dark: var(--gray-dark);
-  --breakpoint-xs: 0;
-  --breakpoint-sm: 576px;
-  --breakpoint-md: 768px;
-  --breakpoint-lg: 992px;
-  --breakpoint-xl: 1200px;
-  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --light-blue: #80bdff;
+  --gray-dark: #343a40;
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --breakpoint-lg: 992px;
+  --breakpoint-md: 768px;
+  --breakpoint-sm: 576px;
+  --breakpoint-xl: 1200px;
+  --breakpoint-xs: 0;
 }
 
 body {
+  background: linear-gradient(var(--red), var(--black));
   border: none;
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
-  height: 100vh;
   margin: 0;
   padding: 0;
   width: 100vw;
-  background: linear-gradient(var(--red), var(--black));
+  height: 1000px;
 }
 
 nav {
@@ -54,7 +54,7 @@ nav {
   box-sizing: border-box;
   color: var(--white);
   display: flex;
-  height: 5%;
+  height: 60px;
   justify-content: space-evenly;
   padding: 4px 16px;
   width: 100%;
@@ -66,103 +66,142 @@ nav > a {
   text-decoration: none;
 }
 
-header {
-  font-size: 48px;
-  font-weight: 400;
+a {
+  color: var(--white);
+  text-overflow: ellipsis;
+}
+
+a:any-link {
+  color: var(--white);
+  text-decoration: none;
+}
+
+a > header {
+  color: var(--white);
+  font-size: 16px;
+  font-weight: bold;
 }
 
 main {
   align-items: center;
+  color: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  color: white;
 }
 
-main > section.search {
+section {
+  width: 100vw;
+}
+
+section.search {
+  box-sizing: border-box;
   align-items: center;
   background-color: var(--dark-gray);
-  border-radius: 16px;
   color: var(--white);
-  box-shadow: 1px 1px 12px -3px black;
   display: flex;
   filter: opacity(90%);
   flex-direction: column;
-  height: min(300px, 30vh);
   justify-content: space-evenly;
-  margin-top: 5vh;
-  transition: 0.5s;
-  width: 60vw;
+  padding: 24px 10%;
+  transition: 0.3s;
+  height: 50vw;
+  margin-bottom: 2vh;
 }
 
-@media screen and (max-width: 576px) {
-  header {
-    font-size: 2rem;
+section > a {
+  padding: 8px;
+  display: block;
+  text-align: center;
+  border: 2px white solid;
+  margin: 1vh 0
+}
+
+section > header {
+  font-size: 2rem;
+}
+
+main {
+  box-sizing: border-box;
+  width: 100%;
+}
+
+
+@media screen and (min-width: 768px) {
+  section > header {
+    font-size: 2.5rem;
   }
   main {
-    width: 100%;
-    box-sizing: border-box;
-    padding: 24px
+    padding: 24px;
   }
+
   main > section.search {
-    width: 100%;
+    height: min(300px, 60vh);
+    border-radius: 16px;
+    box-shadow: 1px 1px 12px -3px black;
+    margin-top: 5vh;
   }
+
+  main > section {
+    width: min(800px, 60vw);
+  }
+
 }
 
 form {
   display: flex;
+  gap: 12px;
   padding: 1rem 15px;
   width: min(100%, 500px);
-  gap: 12px;
 }
 
 form > label > input {
-  width: 100%;
   height: 100%;
+  width: 100%;
 }
 
 form > label {
-  width: 100%;
   flex: 1;
+  width: 100%;
 }
 
 /* https://developer.mozilla.org/en-US/docs/Learn/Forms/Advanced_form_styling#Taming_search_boxes */
 form > label > input[type="search"] {
-  text-overflow: ellipsis;
-  outline-offset: 2px;
-  width: 100%;
-  height: 100%;
-  box-sizing: border-box;
-  margin: 0;
   border: none;
-  padding: 8px 16px;
+  box-sizing: border-box;
   font-size: 1.2rem;
+  height: 100%;
+  margin: 0;
+  outline-offset: 2px;
+  padding: 8px 16px;
+  text-overflow: ellipsis;
+  width: 100%;
 }
 
 form > input[type="submit"] {
+  background-color: var(--blue);
+  border: none;
+  color: var(--white);
   flex: 0;
   height: 100%;
-  background-color: var(--blue);
-  color: var(--white);
-  border: none;
 }
 
 input {
-  color: var(--black);
-  background-color: var(--white);
   background-clip: padding-box;
+  background-color: var(--white);
   border: 1px solid var(--light-gray);
   border-radius: .25rem;
-  transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+  color: var(--black);
   font-size: 16px;
   font-weight: 300;
   padding: 4px 12px;
+  transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
 input:focus {
-  color: var(--dark-gray);
-  outline: 0;
   border-color: var(--blue);
   box-shadow: 0 0 0 2px #4d90fe;
+  color: var(--dark-gray);
+  outline: 0;
 }
 
